<resources>
    <string name="app_name">ARAS Media</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="question_hint">Type your question here</string>
    <string name="question_label">Question?</string>
    <string name="details_label">Solution:</string>
    <string name="crime_solved_label">Solved?</string>
    <string name="choose_person">Person To Ask</string>
    <string-array name="person_array">
        <item>Extension Worker</item>
        <item>Agri-business Expert</item>
        <item>Agronomist</item>
    </string-array>
    <string name="title_activity_sensor">Sensor Readings</string>
    <string name="temperature">25</string>
    <string name="notificationtitle">sensor readings</string>
    <string name="notificationtext">25</string>
    <string name="notificationticker">sensor</string>
    <string name="temperature_label">Temperature</string>
    <string name="moisture_label">Humidity $ Moisture</string>
    <string name="title_activity_weather">Weather Forecast</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_advisory">Advisory Services</string>
    <string name="title_activity_camera">Camera Capture</string>
</resources>
